# cpp-delegate-example

./: .gitignore  CMakeLists.txt  README.md  main.cpp  receiver.hpp
cmake/: macros.cmake
cmake/toolchains/: common.cmake  gcc.cmake  msvc.cmake
example1/: CMakeLists.txt  main.cpp  receiver.hpp
example1/include/: ireceiver.hpp
example2/: CMakeLists.txt  algorithms.hpp  main.cpp
example2/benchmarks/: CMakeLists.txt  algo_bm.cpp
example2/include/: book.hpp  book2.hpp  book_delegate.hpp  packet.hpp
include/: ireceiver.hpp  sender.hpp
